--- a/templates/orders/cart.html
+++ b/templates/orders/cart.html
@@ -26,7 +26,7 @@
                                 <!-- Product Image -->
                                 <div class="flex-shrink-0">
                                     {% if item.product.images.first %}
-                                    <img src="{{ item.product.images.first.image.url }}" alt="{{ item.product.name }}" class="w-20 h-20 object-cover rounded-lg">
+                                    <img src="{{ item.product.images.first.thumbnail_url|default:item.product.images.first.image.url }}" alt="{{ item.product.name }}" class="w-20 h-20 object-cover rounded-lg">
                                     {% else %}
                                     <div class="w-20 h-20 bg-pink-100 rounded-lg flex items-center justify-center">
                                         <span class="text-pink-400 text-xs">No Image</span>
