--- a/templates/base.html
+++ b/templates/base.html
@@ -273,7 +273,7 @@
             >
                         <i class="fas fa-home w-6"></i> Home
                     </a>
-            <a
+                                <a
               href="{% url 'products:categories' %}"
               class="block py-2 hover:text-primary-700 transition duration-300"
             >
@@ -406,7 +406,7 @@
               href="{% url 'orders:cart_detail' %}"
               class="text-gray-500 hover:text-primary-700 relative"
             >
-                        <i class="fas fa-shopping-bag text-xl"></i>
+                        <i class="fas fa-cart-shopping text-xl"></i>
               <span
                 id="cart-count"
                 class="absolute -top-2 -right-2 bg-primary-700 text-white w-5 h-5 rounded-full flex items-center justify-center text-xs {% if not cart_count %}hidden{% endif %}"
