--- a/templates/base.html
+++ b/templates/base.html
@@ -277,7 +277,7 @@
               href="{% url 'products:categories' %}"
               class="block py-2 hover:text-primary-700 transition duration-300"
             >
-                        <i class="fas fa-shopping-bag w-6"></i> Shop
+                        <i class="fas fa-store w-6"></i> Shop
                     </a>
             <a
               href="{% url 'core:about' %}"
