--- a/templates/products/partials/quick_view.html
+++ b/templates/products/partials/quick_view.html
@@ -71,7 +71,7 @@
             <div class="flex space-x-4">
             <button onclick="addToCart({{ product.id }})"
                     class="flex-1 bg-accent hover:bg-accent/90 text-white px-8 py-3 rounded-lg font-semibold transition duration-300">
-                    <i class="fas fa-shopping-bag mr-2"></i>
+                    <i class="fas fa-cart-plus mr-2"></i>
                 Add to Cart
             </button>
                 <button onclick="toggleWishlist({{ product.id }})"
