--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -156,15 +156,11 @@
                         <div class="absolute inset-0 bg-black/50 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center space-x-4">
                             <button onclick="addToCart({{ product.id }})" 
                                     class="bg-white text-pink-600 p-3 rounded-full hover:bg-pink-50 transition-colors duration-300">
-                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4m0 0L7 13m0 0l-2.5 5M7 13l2.5 5m6-5v6a2 2 0 01-2 2H9a2 2 0 01-2-2v-6m8 0V9a2 2 0 00-2-2H9a2 2 0 00-2 2v4.01"></path>
-                                </svg>
+                                <i class="fas fa-cart-plus w-5 h-5"></i>
                             </button>
                             <button onclick="addToWishlist({{ product.id }})" 
                                     class="bg-white text-pink-600 p-3 rounded-full hover:bg-pink-50 transition-colors duration-300">
-                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
-                                </svg>
+                                <i class="far fa-heart w-5 h-5"></i>
                             </button>
                         </div>
                     </div>
